more break points made with https://www.responsivebreakpoints.com/

--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,9 @@ body {
   background-size: cover;
   background-attachment: fixed; */
 }
-img {
+/* img {
   width: 100vw;
-}
+} */
 /* img.solar {
   width: 100px;
   height: 100px;
